dnl Process this file with autoconf to produce a configure script.
AC_INIT(asner.cxx)

dnl Checks for programs.
AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S



dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
